[project]
name = "xscrape"
version = "0.1.0"
description = "Bridge client for MCP (SSE)"
authors = [{ name = "Paul Wilhelm", email = "shredengineer@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "twscrape (==0.17.0)",
    "openai (==1.98.0)",
    "backoff (==2.2.1)",
]

[project.scripts]
xscrape = "xscrape.__main__:main"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["xscrape"]
